--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+* {
+  box-sizing: border-box;
+  color: #333;
+}
+
+.app-header{
   text-align: center;
+  border: 2px solid;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.choose{
+  flex:1;
+  padding-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.options{
+  border: 1px solid;
+  padding: 5px 3px;
+  margin-bottom: 10px;
+}
+
+.template-label{
+  padding-left: 5px;
+  padding-right: 8px;
+
+}
+
+.color-label{
+  padding-left:25px;
+  padding-right: 8px;
+}
+
+.fields{
+  margin-top:5px;
+
+}
+
+.radar{
+  flex:1.5;
+  padding-left:50px;
+}
+
+.field-labels{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.input-row{
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stat{
+  flex: 3;
 }
+
+.val{
+  flex:1;
+}
+
+.input{
+  width:0;
+
+}
+
+.delete{
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+  width: 15px;
+  padding-left: 5px;
+}
+
+.delete:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
