--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .app-header{
   margin-left:20px;
+  margin-right:20px;
   text-align: center;
   border: 2px solid;
 }
@@ -68,6 +69,13 @@
 
 .input{
   width:0;
+}
+
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  padding-right: 16px;
+  
 }
 
 .delete{
