--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,40 @@
 * {
   box-sizing: border-box;
-  color: #333;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+body{
+  background-color: #F0ECE3 !important;
+  height: 100%;
 }
 
 .app-header{
   margin-left:20px;
-  margin-right:20px;
-  text-align: center;
-  border: 2px solid;
+  text-align: left;
+  margin-top:20px;
 }
 
-.container{
-  display:flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.title {
+  font-weight:900;
+  color:black;
 }
 
-.choose{
-  flex:1;
-  margin-left:30px;
-  margin-right: 50px;
-  margin-bottom: 20px;
+.title span {
+  font-weight:900;
+  color: crimson
 }
 
 .options{
-  border: 1px solid;
-  padding: 5px 3px;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.template-label{
-  padding-left: 5px;
-  padding-right: 8px;
 
+.card-header{
+  background-color: #b12b38 !important;
+  color: white;
 }
 
-.color-label{
-  padding-left:25px;
-  padding-right: 8px;
-}
-
-.fields{
-  margin-top:5px;
-
-}
-
-.radar{
-  flex:2;
-}
-
-.field-labels{
-  display: flex;
-  flex-direction: row;
-}
-
-.input-row{
-  display: flex;
-  flex-direction: row;
-}
-
-.stat{
-  flex: 3;
-}
-
-.val{
-  flex:1;
-}
-
-.input{
-  width:0;
-}
-
-.buttons{
-  display: flex;
-  justify-content: space-between;
-  padding-right: 16px;
-  
-}
-
-.delete{
-  width: 32px;
-  height: 32px;
-  opacity: 0.3;
-  width: 16px;
-  padding-left: 5px;
-}
-
-.delete:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.default-label, option:disabled {
-  background-color: #333;
-  color: #fff;
-  padding: 0.6em 0.5em;
+.radar-header{
+  color: #FFF;
 }
