--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,39 @@
 * {
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
-  background-color: #F0ECE3 !important;
+body {
+  background-color: #f0ece3 !important;
   height: 100%;
+  padding: 20px;
 }
 
-.app-header{
-  margin-left:20px;
+.app-header {
   text-align: left;
-  margin-top:20px;
 }
 
-.columns{
-  padding-top:20px
+.col {
+  margin-bottom: 20px;
 }
 
 .title {
-  font-weight:900;
-  color:black;
+  font-weight: 900;
+  color: black;
 }
 
 .title span {
-  font-weight:900;
-  color: crimson
+  font-weight: 900;
+  color: crimson;
 }
 
-.options{
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-
-.card-header{
+.card-header {
   background-color: #b12b38 !important;
   color: white;
 }
 
+.dropdown-menu {
+  max-height: 400px;
+  overflow-y: auto;
+}
